--- a/file-actions/source/info.plist
+++ b/file-actions/source/info.plist
@@ -588,7 +588,7 @@ tell application "System Events"	if frontmost of process "iTerm2" is false then
 				<key>script</key>
 				<string># THESE VARIABLES MUST BE SET. SEE THE ONEUPDATER README FOR AN EXPLANATION OF EACH.
 readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/file-actions/source/info.plist"
-readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/file-actions/file-actions.alfredworkflow"
+readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/file-actions/Useful%20file%20actions.alfredworkflow"
 readonly download_type='direct'
 readonly frequency_check='4'
 
