--- a/wifi/source/info.plist
+++ b/wifi/source/info.plist
@@ -10,11 +10,23 @@
 	<dict>
 		<key>244C9EFF-C0F9-4FA7-BE86-AB0B62D02317</key>
 		<array/>
+		<key>43B64EC5-FE85-42BF-86C3-D9C131827A98</key>
+		<array/>
 		<key>57284CBF-8EA2-402B-8348-F34F919BA81A</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
 				<string>D5F6A6DF-2C1E-4781-B28C-6A480C99C3D6</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>destinationuid</key>
+				<string>43B64EC5-FE85-42BF-86C3-D9C131827A98</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -148,56 +160,6 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>argumenttrimmode</key>
-				<integer>0</integer>
-				<key>argumenttype</key>
-				<integer>1</integer>
-				<key>fixedorder</key>
-				<false/>
-				<key>items</key>
-				<string>[{"title":"Check","arg":"check","subtitle":"Check wifi"},{"title":"Toggle","arg":"toggle","subtitle":"Toggle wifi on\/off"},{"title":"Restart","arg":"restart","subtitle":"Restart wifi"}]</string>
-				<key>keyword</key>
-				<string>wf</string>
-				<key>runningsubtext</key>
-				<string></string>
-				<key>subtext</key>
-				<string></string>
-				<key>title</key>
-				<string>WiFi tools</string>
-				<key>withspace</key>
-				<true/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.listfilter</string>
-			<key>uid</key>
-			<string>A432B494-0C62-4C7F-B366-07EDCF25C0E5</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>lastpathcomponent</key>
-				<false/>
-				<key>onlyshowifquerypopulated</key>
-				<true/>
-				<key>removeextension</key>
-				<false/>
-				<key>text</key>
-				<string></string>
-				<key>title</key>
-				<string>{query}</string>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.output.notification</string>
-			<key>uid</key>
-			<string>D5F6A6DF-2C1E-4781-B28C-6A480C99C3D6</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>concurrently</key>
 				<false/>
 				<key>escaping</key>
@@ -226,6 +188,27 @@ fi</string>
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>lastpathcomponent</key>
+				<false/>
+				<key>onlyshowifquerypopulated</key>
+				<true/>
+				<key>removeextension</key>
+				<false/>
+				<key>text</key>
+				<string></string>
+				<key>title</key>
+				<string>{query}</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.notification</string>
+			<key>uid</key>
+			<string>D5F6A6DF-2C1E-4781-B28C-6A480C99C3D6</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>inputstring</key>
 				<string>{query}</string>
 				<key>matchcasesensitive</key>
@@ -245,13 +228,29 @@ fi</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>triggerid</key>
-				<string>check</string>
+				<key>argumenttrimmode</key>
+				<integer>0</integer>
+				<key>argumenttype</key>
+				<integer>1</integer>
+				<key>fixedorder</key>
+				<false/>
+				<key>items</key>
+				<string>[{"title":"Check","arg":"check","subtitle":"Check wifi"},{"title":"Toggle","arg":"toggle","subtitle":"Toggle wifi on\/off"},{"title":"Restart","arg":"restart","subtitle":"Restart wifi"}]</string>
+				<key>keyword</key>
+				<string>wf</string>
+				<key>runningsubtext</key>
+				<string></string>
+				<key>subtext</key>
+				<string></string>
+				<key>title</key>
+				<string>WiFi tools</string>
+				<key>withspace</key>
+				<true/>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.trigger.external</string>
+			<string>alfred.workflow.input.listfilter</string>
 			<key>uid</key>
-			<string>5A004C71-5166-4D99-BCE2-C220B5FB7861</string>
+			<string>A432B494-0C62-4C7F-B366-07EDCF25C0E5</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -299,6 +298,97 @@ end alfred_script</string>
 		<dict>
 			<key>config</key>
 			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>0</integer>
+				<key>script</key>
+				<string># THESE VARIABLES MUST BE SET. SEE THE ONEUPDATER README FOR AN EXPLANATION OF EACH.
+readonly remote_info_plist="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/wifi/source/info.plist"
+readonly workflow_url="https://raw.githubusercontent.com/nikitavoloboev/small-workflows/master/wifi/WiFi.alfredworkflow"
+readonly download_type='direct'
+readonly frequency_check='4'
+
+# FROM HERE ON, CODE SHOULD BE LEFT UNTOUCHED!
+function abort {
+  echo "${1}" &gt;&amp;2
+  exit 1
+}
+
+function url_exists {
+  curl --silent --location --output /dev/null --fail --range 0-0 "${1}"
+}
+
+function notification {
+  readonly local notificator="$(find . -type d -name 'Notificator.app')"
+  if [[ -n "${notificator}" ]]; then
+    "${notificator}/Contents/Resources/Scripts/notificator" --message "${1}" --title "${alfred_workflow_name}" --subtitle 'A new version is available'
+    return
+  fi
+
+  readonly local terminal_notifier="$(find . -type f -name 'terminal-notifier')"
+  if [[ -n "${terminal_notifier}" ]]; then
+    "${terminal_notifier}" -title "${alfred_workflow_name}" -subtitle 'A new version is available' -message "${1}"
+    return
+  fi
+
+  osascript -e "display notification \"${1}\" with title \"${alfred_workflow_name}\" subtitle \"A new version is available\""
+}
+
+# Local sanity checks
+readonly local_info_plist='info.plist'
+readonly local_version="$(/usr/libexec/PlistBuddy -c 'print version' "${local_info_plist}")"
+
+[[ -n "${local_version}" ]] || abort 'You need to set a workflow version in the configuration sheet.'
+[[ "${download_type}" =~ ^(direct|page|github_release)$ ]] || abort "'download_type' (${download_type}) needs to be one of 'direct', 'page', or 'github_release'."
+[[ "${frequency_check}" =~ ^[0-9]+$ ]] || abort "'frequency_check' (${frequency_check}) needs to be a number."
+
+# Check for updates
+if [[ $(find "${local_info_plist}" -mtime +"${frequency_check}"d) ]]; then
+  if ! url_exists "${remote_info_plist}"; then abort "'remote_info_plist' (${remote_info_plist}) appears to not be reachable."; fi # Remote sanity check
+
+  readonly tmp_file="$(mktemp)"
+  curl --silent --location --output "${tmp_file}" "${remote_info_plist}"
+  readonly remote_version="$(/usr/libexec/PlistBuddy -c 'print version' "${tmp_file}")"
+
+  if [[ "${local_version}" == "${remote_version}" ]]; then
+    touch "${local_info_plist}" # Reset timer by touching local file
+    exit 0
+  fi
+
+  if [[ "${download_type}" == 'page' ]]; then
+    notification 'Opening download page…'
+    open "${workflow_url}"
+    exit 0
+  fi
+
+  download_url="$([[ "${download_type}" == 'github_release' ]] &amp;&amp; curl --silent "https://api.github.com/repos/${workflow_url}/releases/latest" | grep 'browser_download_url' | head -1 | sed -E 's/.*browser_download_url": "(.*)"/\1/' || echo "${workflow_url}")"
+
+  if url_exists "${download_url}"; then
+    notification 'Downloading and installing…'
+    curl --silent --location --output "${HOME}/Downloads/${alfred_workflow_name}.alfredworkflow" "${download_url}"
+    open "${HOME}/Downloads/${alfred_workflow_name}.alfredworkflow"
+  else
+    abort "'workflow_url' (${download_url}) appears to not be reachable."
+  fi
+fi</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>784CD9C9-3674-4819-B25F-032B8D6F3AF5</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
 				<key>inputstring</key>
 				<string>{query}</string>
 				<key>matchcasesensitive</key>
@@ -319,12 +409,20 @@ end alfred_script</string>
 			<key>config</key>
 			<dict>
 				<key>triggerid</key>
-				<string>restart</string>
+				<string>check</string>
 			</dict>
 			<key>type</key>
 			<string>alfred.workflow.trigger.external</string>
 			<key>uid</key>
-			<string>A4AFBB66-6819-4D41-83EB-ABF92F6C821A</string>
+			<string>5A004C71-5166-4D99-BCE2-C220B5FB7861</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.junction</string>
+			<key>uid</key>
+			<string>43B64EC5-FE85-42BF-86C3-D9C131827A98</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
@@ -359,6 +457,19 @@ networksetup -setairportpower $INTERFACE on</string>
 			<key>config</key>
 			<dict>
 				<key>triggerid</key>
+				<string>restart</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.external</string>
+			<key>uid</key>
+			<string>A4AFBB66-6819-4D41-83EB-ABF92F6C821A</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>triggerid</key>
 				<string>toggle</string>
 			</dict>
 			<key>type</key>
@@ -380,83 +491,101 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>note</key>
 			<string>Toggle wifi</string>
 			<key>xpos</key>
-			<integer>510</integer>
+			<integer>380</integer>
 			<key>ypos</key>
-			<integer>210</integer>
+			<integer>170</integer>
 		</dict>
 		<key>244C9EFF-C0F9-4FA7-BE86-AB0B62D02317</key>
 		<dict>
 			<key>note</key>
 			<string>Restart wifi</string>
 			<key>xpos</key>
-			<integer>510</integer>
+			<integer>380</integer>
 			<key>ypos</key>
-			<integer>360</integer>
+			<integer>320</integer>
+		</dict>
+		<key>43B64EC5-FE85-42BF-86C3-D9C131827A98</key>
+		<dict>
+			<key>xpos</key>
+			<integer>570</integer>
+			<key>ypos</key>
+			<integer>210</integer>
 		</dict>
 		<key>57284CBF-8EA2-402B-8348-F34F919BA81A</key>
 		<dict>
 			<key>note</key>
 			<string>Check if wifi is on</string>
 			<key>xpos</key>
-			<integer>510</integer>
+			<integer>380</integer>
 			<key>ypos</key>
-			<integer>70</integer>
+			<integer>30</integer>
 		</dict>
 		<key>5A004C71-5166-4D99-BCE2-C220B5FB7861</key>
 		<dict>
 			<key>xpos</key>
-			<integer>50</integer>
+			<integer>40</integer>
 			<key>ypos</key>
-			<integer>150</integer>
+			<integer>200</integer>
 		</dict>
 		<key>69CFC7AB-ACC3-4C43-902F-62F71D42CFEF</key>
 		<dict>
 			<key>xpos</key>
-			<integer>360</integer>
-			<key>ypos</key>
 			<integer>230</integer>
+			<key>ypos</key>
+			<integer>190</integer>
+		</dict>
+		<key>784CD9C9-3674-4819-B25F-032B8D6F3AF5</key>
+		<dict>
+			<key>colorindex</key>
+			<integer>12</integer>
+			<key>note</key>
+			<string>OneUpdater</string>
+			<key>xpos</key>
+			<integer>650</integer>
+			<key>ypos</key>
+			<integer>180</integer>
 		</dict>
 		<key>952476FD-B1DE-4FC9-9E90-766928DCE83B</key>
 		<dict>
 			<key>xpos</key>
-			<integer>360</integer>
+			<integer>230</integer>
 			<key>ypos</key>
-			<integer>110</integer>
+			<integer>70</integer>
 		</dict>
 		<key>A432B494-0C62-4C7F-B366-07EDCF25C0E5</key>
 		<dict>
 			<key>xpos</key>
-			<integer>40</integer>
-			<key>ypos</key>
 			<integer>30</integer>
+			<key>ypos</key>
+			<integer>80</integer>
 		</dict>
 		<key>A4AFBB66-6819-4D41-83EB-ABF92F6C821A</key>
 		<dict>
 			<key>xpos</key>
-			<integer>50</integer>
+			<integer>190</integer>
 			<key>ypos</key>
-			<integer>270</integer>
+			<integer>320</integer>
 		</dict>
 		<key>BDABADAD-283D-48E1-A307-429BCF1B60EE</key>
 		<dict>
 			<key>xpos</key>
-			<integer>50</integer>
+			<integer>40</integer>
 			<key>ypos</key>
-			<integer>400</integer>
+			<integer>320</integer>
 		</dict>
 		<key>D5F6A6DF-2C1E-4781-B28C-6A480C99C3D6</key>
 		<dict>
 			<key>xpos</key>
-			<integer>710</integer>
+			<integer>580</integer>
 			<key>ypos</key>
-			<integer>70</integer>
+			<integer>30</integer>
 		</dict>
 		<key>E8AA9FCB-543D-4306-9A7E-98B7101803E6</key>
 		<dict>
 			<key>xpos</key>
-			<integer>360</integer>
+			<integer>230</integer>
 			<key>ypos</key>
-			<integer>170</integer>
+			<integer>130</integer>
 		</dict>
 	</dict>
 	<key>version</key>
